# libserpix_rs

./: .gitignore  Cargo.toml  README.md  build.bat
QuestTextSender/: QuestTextSender.toc
src/: screen_reader.rs  ws_windows.rs
