[package]
name = "libserpix_rs"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Real-time data transmission out of World of Warcraft via encoding data into pixels"
homepage = "https://github.com/alex-berliner/libserpix_rs"
repository = "https://github.com/alex-berliner/libserpix_rs"
readme = "README.md"

[lib]
name = "libserpix_rs"

[[bin]]
name = "wow"
path = "src/bin/wow.rs"

[dependencies]
cbor = "0.4.1"
devtimer = "3.0.0"
image = "0.24"
rustc-serialize = "0.3.24"
serde_json = "1.0.94"
tokio = {version = "1.23.0", features = ["full"]}
win-screenshot = { version = "3.0.1", optional = true, features = ["windows-only"] }
winapi = { version = "0.3", features = ["winuser", "windows-only"], optional = true }
windows = { version = "0.37", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_Xps", "windows-only"], optional = true }

[profile.dev.package.win-screenshot]
opt-level = 3
